--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LOTUS'S VRP SOLVER - Route Optimization</title>
+    <title>VRP SOLVER - Route Optimization</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.9.4/leaflet.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.9.4/leaflet.css" />
@@ -538,7 +538,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>LOTUS'S ROUTE PLANNER</h1>
+            <h1>ROUTE PLANNER</h1>
             <p>Vehicle Routing Problem with Time Windows • 2025 Edition</p>
         </div>
 
