--- a/index.html
+++ b/index.html
@@ -971,7 +971,7 @@
                             <th>Location</th>
                             <th>Time Window</th>
                             <th>Demand</th>
-                            <th>Service Time</th>
+                            <th>Weight</th>
                         </tr>
                     </thead>
                     <tbody>
